<resources>
    <!-- app & location -->
    <string name="app_name">Weather App</string>
    <string name="forecast_name">Forecast Conditions</string>
    <string name="city_state">St. Paul, MN</string>

    <!-- current conditions -->
    <string name="temp">%s°</string>
    <string name="feels_like">Feels like %d°</string>
    <string name="low_temp">Low %d°</string>
    <string name="high_temp">High %d°</string>
    <string name="humidity">Humidity %d</string>
    <string name="pressure">Pressure %d hPa</string>

    <!-- day 1 -->
    <string name="day1_img_url">https://openweathermap.org/img/wn/01d@4x.png</string>
    <string name="day1_date">Jan 31</string>
    <string name="day1_temp">72°</string>
    <string name="day1_high_temp">High 80°</string>
    <string name="day1_low_temp">Low 65°</string>
    <string name="day1_sunrise">Sunrise 8:00am</string>
    <string name="day1_sunset">Sunset 9:00pm</string>

    <!-- day 2 -->
    <string name="day2_img_url">https://openweathermap.org/img/wn/02d@4x.png</string>
    <string name="day2_date">Feb 1</string>
    <string name="day2_temp">72°</string>
    <string name="day2_high_temp">High 80°</string>
    <string name="day2_low_temp">Low 65°</string>
    <string name="day2_sunrise">Sunrise 8:00am</string>
    <string name="day2_sunset">Sunset 9:00pm</string>

    <!-- day 3 -->
    <string name="day3_img_url">https://openweathermap.org/img/wn/03d@4x.png</string>
    <string name="day3_date">Feb 2</string>
    <string name="day3_temp">72°</string>
    <string name="day3_high_temp">High 80°</string>
    <string name="day3_low_temp">Low 65°</string>
    <string name="day3_sunrise">Sunrise 8:00am</string>
    <string name="day3_sunset">Sunset 9:00pm</string>

    <!-- day 4 -->
    <string name="day4_img_url">https://openweathermap.org/img/wn/04d@4x.png</string>
    <string name="day4_date">Feb 3</string>
    <string name="day4_temp">72°</string>
    <string name="day4_high_temp">High 80°</string>
    <string name="day4_low_temp">Low 65°</string>
    <string name="day4_sunrise">Sunrise 8:00am</string>
    <string name="day4_sunset">Sunset 9:00pm</string>

    <!-- forecast button -->
    <string name="forecast">Forecast</string>

    <!-- location button -->
    <string name="getCondition">Current Conditions</string>
</resources>